# mt-test-examples

./: .gitignore  BLOCKCHAIN.md  Cargo.toml  README.md  WASMD.md  wasmd.sh
article-2-1-0/: Cargo.toml
article-2-1-0/tests/: test_addr_make_in_init.rs  test_app_api_addr.rs  test_into_bech32m_addr.rs  test_mock_api_bech32m_addr.rs  test_staking.rs
counter-sv/src/: contract.rs  lib.rs
counter-sv/src/multitest/: mod.rs
counter-sylvia/: .gitignore  Cargo.toml
counter-sylvia/src/: contract.rs
intro/src/: contract.rs
intro/tests/: mod.rs
intro/tests/multitest/: mod.rs  test_execute.rs  test_instantiate.rs  test_query.rs
mte/: go.mod  go.sum  readme.md
mte-adder/: .gitignore  Cargo.toml  README.md  taskfile.yml
mte-adder/src/: contract.rs  msg.rs
mte-addresses/: Cargo.toml  MATRIX.md  README.md  taskfile.yml
mte-addresses/tests/multitest/: README.md  mod.rs  test_addresses.rs  test_app_api.rs  test_into_addr.rs  test_into_bech32.rs  test_into_bech32m.rs  test_mock_api.rs  test_mock_api_bech32.rs  test_mock_api_bech32m.rs
mte-alu/: Cargo.toml  README.md  taskfile.yml
mte-app/: Cargo.toml
mte-app-builder/: Cargo.toml
mte-app-builder/tests/multitest/: mod.rs  test_with_block.rs
mte-app/tests/multitest/: mod.rs  test_app_default.rs
mte-article-2-1-0/tests/: test_empty_attributes.rs  test_into_addr.rs  test_into_bech32_addr.rs  test_mock_api_addr.rs  test_mock_api_bech32_addr.rs  test_staking.rs
mte-blocks/: Cargo.toml  taskfile.yml
mte-blocks/tests/multitest/: mod.rs  test_block.rs
mte-code-info/: Cargo.toml  README.md  taskfile.yml
mte-code-info/src/: contract.rs  msg.rs
mte-counter/: Cargo.toml  README.md  cov.sh  taskfile.yml
mte-counter-sv/: Cargo.toml  README.md  coverage.sh  taskfile.yml
mte-counter-sv/src/: contract.rs  msg.rs
mte-counter-sv/tests/multitest/: test_counter.rs
mte-counter/artifacts/: checksums.txt  counter.wasm
mte-counter/src/: contract.rs  msg.rs
mte-counter/tests/multitest/: test_counter.rs
mte-custom-query/: Cargo.toml  README.md
mte-custom-query/src/: contract.rs  msg.rs
mte-custom-query/tests/multitest/: mod.rs  test_counter.rs
mte-cw-template/: Cargo.toml  NOTICE
mte-cw-template/src/: contract.rs
mte-echo/: Cargo.toml  IGNITE.md  README.md  ROUND4.md  ROUND5.md  WASMD.md  cov.sh  taskfile.yml
mte-echo/src/: contract.rs  msg.rs
mte-echo/tests/multitest/: test_counter.rs
mte-intro/: Cargo.toml  README.md
mte-intro/tests/multitest/: test_execute.rs  test_instantiate.rs  test_query.rs
mte-multi-custom/: Cargo.toml  README.md
mte-multi-custom/tests/multitest/: test_general.rs
mte-responder/: Cargo.toml  README.md  SUBCALLS.md  WASMD.md  cov.sh  taskfile.yml
mte-responder/src/: contract.rs  msg.rs
mte-responder/tests/multitest/: test_counter.rs
mte-rotator/: Cargo.toml  README.md  taskfile.yml
mte-rotator/src/: contract.rs  defs.rs  lib.rs  msg.rs
mte-rotator/tests/multitest/: mod.rs  test_rotator.rs
mte-terra-2-0/: Cargo.toml
mte-terra-2-0/src/: lib.rs  t2_contract.rs
mte/api/mte/mte/: genesis.pulsar.go  params.pulsar.go  query.pulsar.go  query_grpc.pb.go  tx.pulsar.go  tx_grpc.pb.go
mte/app/: app.go  app_config.go  ibc.go  sim_bench_test.go  sim_test.go
mte/cmd/mted/: main.go
mte/cmd/mted/cmd/: commands.go  root.go  testnet.go
mte/docs/static/: openapi.yml
mte/proto/: buf.gen.pulsar.yaml
mte/proto/mte/mte/: genesis.proto  params.proto  query.proto  tx.proto
mte/testutil/keeper/: mte.go
mte/testutil/network/: network.go
mte/x/mte/keeper/: keeper.go  msg_server.go  msg_server_test.go  msg_update_params.go  msg_update_params_test.go  params.go  params_test.go  query.go  query_params.go  query_params_test.go
mte/x/mte/module/: autocli.go  genesis.go  genesis_test.go  module.go  simulation.go
mte/x/mte/types/: errors.go  genesis.pb.go  genesis_test.go  keys.go  params.pb.go  query.pb.go  query.pb.gw.go  tx.pb.go
multi-custom/: Cargo.toml
multi-custom/src/: lib.rs  msg.rs  query.rs  virtual_staking_contract.rs
multi-custom/tests/multitest/: mod.rs  test_general.rs
(+2 files in other folders)
