[package]
name = "counter"
version = "0.0.1"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2", features = ["staking", "stargate"] }
sylvia = "1"
serde = "1.0"
schemars = "0.8"
cosmwasm-schema = "2"
cw-storage-plus = "2"

[dev-dependencies]
sylvia = { version = "1", features = ["mt", "stargate"] }
cw-multi-test = { version = "2", features = ["staking", "stargate", "cosmwasm_2_0"] }
