[package]
name = "counter"
version = "0.0.1"
edition = "2021"

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2" }
cosmwasm-schema = "2"
cw-storage-plus = "2"
schemars = "0.8"
serde = "1.0"

[dev-dependencies]
cw-multi-test = { version = "2", features = ["cosmwasm_2_0"] }
