[package]
name = "mte-multi-custom"
authors = ["Dariusz Depta <depta@engos.de>"]
version = "0.0.1"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2", features = ["staking"] }
schemars = "0.8.19"
serde = "1.0.201"

[dev-dependencies]
cw-multi-test = { version = "2", features = ["staking"] }
