[package]
name = "mte-responder"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "2"
cosmwasm-std = { version = "2" }
cw-storage-plus = "2"
schemars = "0.8"
serde = "1.0"

[dev-dependencies]
# cw-multi-test = { version = "2", features = ["cosmwasm_2_0"] }
cw-multi-test = { path = "../../../CosmWasm/cw-multi-test-2", features = ["cosmwasm_2_1"] }
serde_json = "1.0.128"
